--- a/views/index.ejs
+++ b/views/index.ejs
@@ -434,6 +434,7 @@
 
 
         <!-- Blog Start -->
+        <!--
         <div class="container-fluid blog pb-5">
             <div class="container pb-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
@@ -483,6 +484,7 @@
                 </div>
             </div>
         </div>
+        -->
         <!-- Blog End -->
 
 
@@ -565,7 +567,7 @@
                         <div class="team-item p-4">
                             <div class="team-inner rounded">
                                 <div class="team-img">
-                                    <img src="img/tesloach.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                                    <img src="img/second.jpg" class="img-fluid rounded-top w-100" alt="Image">
                                     <div class="team-share">
                                         <a class="btn btn-secondary btn-md-square rounded-pill text-white mx-1" href=""><i class="fas fa-share-alt"></i></a>
                                     </div>
