--- a/views/index.ejs
+++ b/views/index.ejs
@@ -159,7 +159,6 @@
                             <div class="feature-icon mb-3"><i class="fas fa-hand-holding-water text-white fa-3x"></i></div>
                             <a href="#" class="h4 mb-3">Ensuring Excellence in Every Drop</a>
                             <p class="mb-3">At Itang Town Water Utility, we are committed to delivering the highest quality water to our community. </p>
-                            <a href="#" class="btn text-secondary">Read More <i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.4s">
@@ -168,7 +167,6 @@
                             <a href="#" class="h4 mb-3">Advanced Filtration System</a>
                             <p class="mb-3">Our state-of-the-art filtration system ensures that every drop of water meets the highest
                                 standards of purity and safety, providing you with clean and reliable water.</p>
-                            <a href="#" class="btn text-secondary">Read More <i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.6s">
@@ -177,7 +175,6 @@
                             <a href="#" class="h4 mb-3">Sustainable Practices</a>
                             <p class="mb-3">We prioritize sustainability in our operations, employing eco-friendly practices to conserve
                                 resources and reduce environmental impact.</p>
-                            <a href="#" class="btn text-secondary">Read More <i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.8s">
@@ -186,7 +183,6 @@
                             <a href="#" class="h4 mb-3">Comprehensive Quality Checks</a>
                             <p class="mb-3">We conduct thorough lab tests and quality checks to ensure that our water is consistently safe
                                 and meets all health standards.</p>
-                            <a href="#" class="btn text-secondary">Read More <i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
 
@@ -256,8 +252,6 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <a href="#" class="btn btn-secondary rounded-pill py-3 px-5">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -382,17 +376,18 @@
                             <div class="col-12">
                                 <div class="d-flex">
                                     <div class="pe-4">
-                                        <div class="service-btn"><i class="fas fa-tint text-white fa-2x"></i></div>
+                                        <div class="service-btn"><i class="fas fa-hands-helping text-white fa-2x"></i></div>
                                     </div>
                                     <div class="service-content">
-                                        <a href="#" class="h4 d-inline-block mb-3">Water Softening</a>
-                                        <p class="mb-0">Our water softening services improve water quality by reducing
-                                            hardness, ensuring cleaner and more efficient water for your needs.</p>
+                                        <a href="#" class="h4 d-inline-block mb-3">Community Service</a>
+                                        <p class="mb-0">Our community service initiatives focus on providing support, resources, and
+                                            assistance to enhance the well-being and development of local communities.</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                     <div class="service-item rounded p-4 mb-4">
                         <div class="row">
                             <div class="col-12">
@@ -558,7 +553,7 @@
                                 </div>
                                 <div class="bg-light rounded-bottom text-center py-4">
                                     <h4 class="mb-3">Koat Jing</h4>
-                                    <p class="mb-0">Operation & Techical Head</p>
+                                    <p class="mb-0">Operation & Technical Head</p>
                                 </div>
                             </div>
                         </div>
