--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -168,12 +168,12 @@
         <!-- Modal Search End -->
 
         <!-- Blog Start -->
-        <!--
+        
         <div class="container-fluid blog py-5">
             <div class="container py-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
                     <h4 class="text-uppercase text-primary">Our Blog</h4>
-                    <h1 class="display-3 text-capitalize mb-3">Latest Blog & News</h1>
+                    <h1 class="display-3 text-capitalize mb-3">Blog & News</h1>
                 </div>
                 <div class="row g-4 justify-content-center">
                     <div class="col-lg-6 col-xl-4 wow fadeInUp" data-wow-delay="0.2s">
@@ -218,7 +218,55 @@
                 </div>
             </div>
         </div>
-        -->
+        <div class="container-fluid blog pb-5">
+            <div class="container pb-5">
+                <div class="row g-4 justify-content-center">
+                    <div class="col-lg-6 col-xl-4 wow fadeInUp" data-wow-delay="0.2s">
+                        <div class="blog-item">
+                            <div class="blog-img">
+                                <img src="img/blog-1.jpg" class="img-fluid rounded-top w-100" alt="">
+                                <div class="blog-date px-4 py-2"><i class="fa fa-calendar-alt me-1"></i> Jan 12 2025</div>
+                            </div>
+                            <div class="blog-content rounded-bottom p-4">
+                                <a href="#" class="h4 d-inline-block mb-3">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit. Unde</a>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, officiis?</p>
+                                <a href="#" class="fw-bold text-secondary">Read More <i class="fa fa-angle-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-xl-4 wow fadeInUp" data-wow-delay="0.4s">
+                        <div class="blog-item">
+                            <div class="blog-img">
+                                <img src="img/blog-2.jpg" class="img-fluid rounded-top w-100" alt="">
+                                <div class="blog-date px-4 py-2"><i class="fa fa-calendar-alt me-1"></i> Jan 12 2025</div>
+                            </div>
+                            <div class="blog-content rounded-bottom p-4">
+                                <a href="#" class="h4 d-inline-block mb-3">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit. Unde</a>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, officiis?</p>
+                                <a href="#" class="fw-bold text-secondary">Read More <i class="fa fa-angle-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-xl-4 wow fadeInUp" data-wow-delay="0.6s">
+                        <div class="blog-item">
+                            <div class="blog-img">
+                                <img src="img/blog-3.jpg" class="img-fluid rounded-top w-100" alt="">
+                                <div class="blog-date px-4 py-2"><i class="fa fa-calendar-alt me-1"></i> Jan 12 2025</div>
+                            </div>
+                            <div class="blog-content rounded-bottom p-4">
+                                <a href="#" class="h4 d-inline-block mb-3">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit. Unde</a>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, officiis?</p>
+                                <a href="#" class="fw-bold text-secondary">Read More <i class="fa fa-angle-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    
         <!-- Blog End -->
 
         <!-- Footer Start -->
@@ -318,12 +366,7 @@
                     <div class="col-md-6 text-center text-md-start mb-md-0">
                         <span class="text-body"><a href="#" class="border-bottom text-white"><i class="fas fa-copyright text-light me-2"></i>ITWU</a>, All right reserved.</span>
                     </div>
-                    <div class="col-md-6 text-center text-md-end text-body">
-                        <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
-                        <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
-                        <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                        Designed By <a class="border-bottom text-white" href="https://htmlcodex.com">HTML Codex</a>
-                    </div>
+                    
                 </div>
             </div>
         </div>
