--- a/views/index.ejs
+++ b/views/index.ejs
@@ -429,7 +429,6 @@
 
 
         <!-- Blog Start -->
-        <!--
         <div class="container-fluid blog pb-5">
             <div class="container pb-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
@@ -479,7 +478,7 @@
                 </div>
             </div>
         </div>
-        -->
+        
         <!-- Blog End -->
 
 
@@ -508,7 +507,7 @@
                                     </div>
                                 </div>
                                 <div class="bg-light rounded-bottom text-center py-4">
-                                    <h4 class="mb-3">Nhial Pal Bie</h4>
+                                    <h4 class="mb-3">Nhial Pal</h4>
                                     <p class="mb-0">Project General Manager</p>
                                 </div>
                             </div>
@@ -757,12 +756,7 @@
                     <div class="col-md-6 text-center text-md-start mb-md-0">
                         <span class="text-body"><a href="#" class="border-bottom text-white"><i class="fas fa-copyright text-light me-2"></i>ITWU</a>, All right reserved.</span>
                     </div>
-                    <div class="col-md-6 text-center text-md-end text-body">
-                        <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
-                        <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
-                        <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                        Designed By <a class="border-bottom text-white" href="https://htmlcodex.com">HTML Codex</a>
-                    </div>
+                    
                 </div>
             </div>
         </div>
