--- a/views/index.ejs
+++ b/views/index.ejs
@@ -429,6 +429,7 @@
 
 
         <!-- Blog Start -->
+        <!--
         <div class="container-fluid blog pb-5">
             <div class="container pb-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
@@ -478,6 +479,7 @@
                 </div>
             </div>
         </div>
+        -->
         
         <!-- Blog End -->
 
@@ -552,7 +554,7 @@
                                 </div>
                                 <div class="bg-light rounded-bottom text-center py-4">
                                     <h4 class="mb-3">Koat Jing</h4>
-                                    <p class="mb-0">Operation & Technical Head</p>
+                                    <p class="mb-0">Operation & Maintenance Head</p>
                                 </div>
                             </div>
                         </div>
