--- a/views/team.ejs
+++ b/views/team.ejs
@@ -197,8 +197,62 @@
                                     </div>
                                 </div>
                                 <div class="bg-light rounded-bottom text-center py-4">
-                                    <h4 class="mb-3">Nhial Pal Bie</h4>
+                                    <h4 class="mb-3">Nhial Pal</h4>
                                     <p class="mb-0">Project General Manager</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.6s">
+                        <div class="team-item p-4">
+                            <div class="team-inner rounded">
+                                <div class="team-img">
+                                    <img src="img/op.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                                    <div class="team-share">
+                                        <a class="btn btn-secondary btn-md-square rounded-pill text-white mx-1" href=""><i
+                                                class="fas fa-share-alt"></i></a>
+                                    </div>
+                                    <div class="team-icon rounded-pill py-2 px-2">
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill mx-1" href=""><i
+                                                class="fab fa-facebook-f"></i></a>
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i
+                                                class="fab fa-twitter"></i></a>
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i
+                                                class="fab fa-linkedin-in"></i></a>
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i
+                                                class="fab fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                                <div class="bg-light rounded-bottom text-center py-4">
+                                    <h4 class="mb-3">Koat Jing</h4>
+                                    <p class="mb-0">Operation & Maintenance Head</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.4s">
+                        <div class="team-item p-4">
+                            <div class="team-inner rounded">
+                                <div class="team-img">
+                                    <img src="img/tay.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                                    <div class="team-share">
+                                        <a class="btn btn-secondary btn-md-square rounded-pill text-white mx-1" href=""><i
+                                                class="fas fa-share-alt"></i></a>
+                                    </div>
+                                    <div class="team-icon rounded-pill py-2 px-2">
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill mx-1" href=""><i
+                                                class="fab fa-facebook-f"></i></a>
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i
+                                                class="fab fa-twitter"></i></a>
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i
+                                                class="fab fa-linkedin-in"></i></a>
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i
+                                                class="fab fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                                <div class="bg-light rounded-bottom text-center py-4">
+                                    <h4 class="mb-3">Tiador Dak</h4>
+                                    <p class="mb-0">Commercial Manager</p>
                                 </div>
                             </div>
                         </div>
@@ -226,33 +280,6 @@
                                 <div class="bg-light rounded-bottom text-center py-4">
                                     <h4 class="mb-3">Ruot Jang</h4>
                                     <p class="mb-0">Senior HR Offer</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="team-item p-4">
-                            <div class="team-inner rounded">
-                                <div class="team-img">
-                                    <img src="img/op.jpg" class="img-fluid rounded-top w-100" alt="Image">
-                                    <div class="team-share">
-                                        <a class="btn btn-secondary btn-md-square rounded-pill text-white mx-1" href=""><i
-                                                class="fas fa-share-alt"></i></a>
-                                    </div>
-                                    <div class="team-icon rounded-pill py-2 px-2">
-                                        <a class="btn btn-secondary btn-sm-square rounded-pill mx-1" href=""><i
-                                                class="fab fa-facebook-f"></i></a>
-                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i
-                                                class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i
-                                                class="fab fa-linkedin-in"></i></a>
-                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i
-                                                class="fab fa-instagram"></i></a>
-                                    </div>
-                                </div>
-                                <div class="bg-light rounded-bottom text-center py-4">
-                                    <h4 class="mb-3">Koat Jing</h4>
-                                    <p class="mb-0">Operation & Techical Head</p>
                                 </div>
                             </div>
                         </div>
