--- a/views/index.ejs
+++ b/views/index.ejs
@@ -595,7 +595,7 @@
                         <div class="team-item p-4">
                             <div class="team-inner rounded">
                                 <div class="team-img">
-                                    <img src="img/tesloach.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                                    <img src="img/second.jpg" class="img-fluid rounded-top w-100" alt="Image">
                                     <div class="team-share">
                                         <a class="btn btn-secondary btn-md-square rounded-pill text-white mx-1" href=""><i class="fas fa-share-alt"></i></a>
                                     </div>
